--- a/NestingAssistant/Views/ProfileNestingView.axaml
+++ b/NestingAssistant/Views/ProfileNestingView.axaml
@@ -6,16 +6,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:u="https://irihi.tech/ursa"
     xmlns:vm="clr-namespace:NestingAssistant.ViewModels"
+
     d:DesignHeight="450"
     d:DesignWidth="800"
     x:DataType="vm:ProfileNestingViewModel"
     mc:Ignorable="d">
+
 	<Design.DataContext>
 		<vm:ProfileNestingViewModel />
 	</Design.DataContext>
 	<TabControl>
 		<TabItem Header="零件数据设置">
-			<StackPanel>
+			<Grid Grid.Row="0" RowDefinitions="*,Auto">
 				<DataGrid
                     GridLinesVisibility="Horizontal"
                     HeadersVisibility="All"
@@ -43,16 +45,74 @@
                             Header="标签" />
 					</DataGrid.Columns>
 				</DataGrid>
-				<UniformGrid Margin="0,10,0,0" Rows="1">
-
-					<Button Content="从剪切板复制" />
-					<Button Content="导入Excel文件" />
+				<UniformGrid
+                    Grid.Row="1"
+                    Margin="0,10"
+                    Rows="1">
+					<Button
+                        Command="{Binding ImportBasicDataCommand}"
+                        CommandParameter="Part"
+                        Content="导入零件数据(Excel)" />
+					<Button Content="从剪切板复制零件数据" />
+					<Button
+                        Command="{Binding ExportTemplateCommand}"
+                        CommandParameter="Part"
+                        Content="导出零件模板(Excel)" />
 				</UniformGrid>
-			</StackPanel>
+			</Grid>
 		</TabItem>
 		<TabItem Header="原材料数据设置">
-			<TextBlock Text="1l3j2l1j3l21" />
+			<Grid Grid.Row="0" RowDefinitions="*,Auto">
+				<DataGrid
+                    GridLinesVisibility="Horizontal"
+                    HeadersVisibility="All"
+                    ItemsSource="{Binding ProfileMaterials}">
+					<DataGrid.Columns>
+						<DataGridTextColumn
+                            Width="8*"
+                            x:DataType="vm:ProfileMaterialViewModel"
+                            Binding="{Binding Category}"
+                            Header="类型" />
+						<DataGridTextColumn
+                            Width="3*"
+                            x:DataType="vm:ProfilePartViewModel"
+                            Binding="{Binding Length}"
+                            Header="长度" />
+						<DataGridTextColumn
+                            Width="2*"
+                            x:DataType="vm:ProfilePartViewModel"
+                            Binding="{Binding Piece}"
+                            Header="件数" />
+					</DataGrid.Columns>
+				</DataGrid>
+				<UniformGrid
+                    Grid.Row="1"
+                    Margin="0,10"
+                    Rows="1">
+					<Button
+                        Command="{Binding ImportBasicDataCommand}"
+                        CommandParameter="Material"
+                        Content="导入原材料数据(Excel)" />
+					<Button Content="从剪切板复制原材料数据" />
+					<Button
+                        Command="{Binding ExportTemplateCommand}"
+                        CommandParameter="Material"
+                        Content="导出原材料模板(Excel)" />
+				</UniformGrid>
+			</Grid>
 		</TabItem>
-		<TabItem Header="优化设置" />
+		<TabItem Header="优化设置">
+			<Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,*">
+				<UniformGrid Grid.Row="0" Rows="1">
+					<u:NumericDoubleUpDown />
+					<u:NumericIntUpDown />
+					<u:TimePicker />
+				</UniformGrid>
+				<UniformGrid Grid.Row="1" Rows="1">
+					<Button Content="查看结果" />
+					<Button Content="导出结果" />
+				</UniformGrid>
+			</Grid>
+		</TabItem>
 	</TabControl>
 </UserControl>
