--- a/NestingAssistant/Views/MainWindow.axaml
+++ b/NestingAssistant/Views/MainWindow.axaml
@@ -1,4 +1,4 @@
-<Window
+<u:UrsaWindow
     x:Class="NestingAssistant.Views.MainWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,20 +10,8 @@
     Title="NestingAssistant"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    Background="Transparent"
-    ExtendClientAreaToDecorationsHint="True"
-    TransparencyLevelHint="AcrylicBlur"
     mc:Ignorable="d">
 	<Panel>
-		<ExperimentalAcrylicBorder IsHitTestVisible="False">
-			<ExperimentalAcrylicBorder.Material>
-				<ExperimentalAcrylicMaterial
-                    BackgroundSource="None"
-                    MaterialOpacity="0.8"
-                    TintColor="LightGray"
-                    TintOpacity="0.1" />
-			</ExperimentalAcrylicBorder.Material>
-		</ExperimentalAcrylicBorder>
 		<views:ProfileNestingView Margin="0,30,0,0" />
 	</Panel>
-</Window>
+</u:UrsaWindow>
