--- a/NestingAssistant/App.axaml
+++ b/NestingAssistant/App.axaml
@@ -3,6 +3,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:semi="https://irihi.tech/semi"
+    xmlns:u="https://irihi.tech/ursa"
     xmlns:u-semi="https://irihi.tech/ursa/themes/semi"
     RequestedThemeVariant="Default">
 	<!--  "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options.  -->
@@ -12,6 +13,17 @@
 		<StyleInclude Source="avares://Semi.Avalonia.DataGrid/Index.axaml" />
 	</Application.Styles>
 	<Application.Resources>
+		<ControlTheme x:Key="HorizontalFormGroup" TargetType="u:FormGroup">
+			<Setter Property="Foreground" Value="Green" />
+			<Setter Property="ItemsPanel">
+				<Setter.Value>
+					<ItemsPanelTemplate>
+						<UniformGrid Rows="1" />
+					</ItemsPanelTemplate>
+				</Setter.Value>
+			</Setter>
+		</ControlTheme>
+		<!--<ResourceInclude Source="avares://NestingAssistant/Styles/FormGroupControlTheme.axaml" />-->
 		<FontWeight x:Key="ButtonDefaultFontWeight">500</FontWeight>
 	</Application.Resources>
 	<!--<TrayIcon.Icons>
