--- a/NestingAssistant/Views/ProfileNestingView.axaml
+++ b/NestingAssistant/Views/ProfileNestingView.axaml
@@ -2,6 +2,7 @@
     x:Class="NestingAssistant.Views.ProfileNestingView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:NestingAssistant.Converter"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:u="https://irihi.tech/ursa"
@@ -13,6 +14,21 @@
 	<Design.DataContext>
 		<vm:ProfileNestingViewModel />
 	</Design.DataContext>
+	<UserControl.Styles>
+		<!--<Style Selector="ToggleButton#DisplayToggleButton:checked">
+			<Setter Property="Background" Value="LightGray" />
+			-->
+		<!--<Style.Animations>
+				<Animation Duration="0:0:1">
+					<KeyFrame>
+						<Setter Property="Width" Value="300" />
+					</KeyFrame>
+				</Animation>
+			</Style.Animations>-->
+		<!--
+		</Style>-->
+	</UserControl.Styles>
+	<UserControl.Resources />
 	<TabControl>
 		<TabItem Header="零件数据设置">
 			<Grid Grid.Row="0" RowDefinitions="*,Auto">
@@ -23,22 +39,18 @@
 					<DataGrid.Columns>
 						<DataGridTextColumn
                             Width="8*"
-                            x:DataType="vm:ProfilePartViewModel"
-                            Binding="{Binding Category}"
+                            Binding="{Binding Type}"
                             Header="类型" />
 						<DataGridTextColumn
                             Width="3*"
-                            x:DataType="vm:ProfilePartViewModel"
                             Binding="{Binding Length}"
                             Header="长度" />
 						<DataGridTextColumn
                             Width="2*"
-                            x:DataType="vm:ProfilePartViewModel"
                             Binding="{Binding Piece}"
                             Header="件数" />
 						<DataGridTextColumn
                             Width="8*"
-                            x:DataType="vm:ProfilePartViewModel"
                             Binding="{Binding Label}"
                             Header="标签" />
 					</DataGrid.Columns>
@@ -46,16 +58,18 @@
 				<UniformGrid
                     Grid.Row="1"
                     Margin="0,10"
+                    HorizontalAlignment="Center"
                     Rows="1">
 					<Button
                         Command="{Binding ImportBasicDataCommand}"
                         CommandParameter="Part"
                         Content="导入零件数据(Excel)" />
-					<Button Content="从剪切板复制零件数据" />
+					<Button Content="从剪切板复制零件数据" IsEnabled="False" />
 					<Button
                         Command="{Binding ExportTemplateCommand}"
                         CommandParameter="Part"
-                        Content="导出零件模板(Excel)" />
+                        Content="导出零件模板(Excel)"
+                        Foreground="Green" />
 				</UniformGrid>
 			</Grid>
 		</TabItem>
@@ -67,18 +81,15 @@
                     ItemsSource="{Binding ProfileMaterials}">
 					<DataGrid.Columns>
 						<DataGridTextColumn
-                            Width="8*"
-                            x:DataType="vm:ProfileMaterialViewModel"
-                            Binding="{Binding Category}"
+                            Width="6*"
+                            Binding="{Binding Type}"
                             Header="类型" />
 						<DataGridTextColumn
                             Width="3*"
-                            x:DataType="vm:ProfilePartViewModel"
                             Binding="{Binding Length}"
                             Header="长度" />
 						<DataGridTextColumn
                             Width="2*"
-                            x:DataType="vm:ProfilePartViewModel"
                             Binding="{Binding Piece}"
                             Header="件数" />
 					</DataGrid.Columns>
@@ -86,81 +97,170 @@
 				<UniformGrid
                     Grid.Row="1"
                     Margin="0,10"
+                    HorizontalAlignment="Center"
                     Rows="1">
 					<Button
                         Command="{Binding ImportBasicDataCommand}"
                         CommandParameter="Material"
                         Content="导入原材料数据(Excel)" />
-					<Button Content="从剪切板复制原材料数据" />
+					<Button Content="从剪切板复制原材料数据" IsEnabled="False" />
 					<Button
                         Command="{Binding ExportTemplateCommand}"
                         CommandParameter="Material"
-                        Content="导出原材料模板(Excel)" />
+                        Content="导出原材料模板(Excel)"
+                        Foreground="Green" />
 				</UniformGrid>
 			</Grid>
 		</TabItem>
 		<TabItem Header="优化设置">
-			<u:LoadingContainer
-                HorizontalContentAlignment="Stretch"
-                VerticalContentAlignment="Stretch"
-                IsLoading="{Binding RunCommand.IsRunning}"
-                LoadingMessage="优化进行中,请稍后...">
-				<u:LoadingContainer.Indicator>
-					<Viewbox
-                        Width="120"
-                        Height="120"
-                        Stretch="Uniform">
-						<u:LoadingIcon Classes="Large" />
-					</Viewbox>
-				</u:LoadingContainer.Indicator>
-				<Grid RowDefinitions="*,Auto">
-					<u:Form
-                        Grid.Row="0"
-                        HorizontalAlignment="Stretch"
-                        DataContext="{Binding Option}"
-                        LabelAlignment="Left"
-                        LabelPosition="Left"
-                        LabelWidth="*">
-						<u:FormGroup Header="切割设置">
-							<u:NumericDoubleUpDown
-                                u:FormItem.Label="切割缝隙:"
-                                Minimum="0"
-                                Value="{Binding Spacing}" />
-							<u:NumericIntUpDown
-                                u:FormItem.Label="最大段数:"
-                                Minimum="0"
-                                Value="{Binding MaxSegments}" />
-						</u:FormGroup>
-						<u:FormGroup Header="优化设置">
-							<u:NumericIntUpDown
-                                u:FormItem.Label="迭代次数:"
-                                Minimum="0"
-                                Value="{Binding Generations}" />
-							<u:NumericIntUpDown
-                                u:FormItem.Label="种群大小:"
-                                Minimum="0"
-                                Value="{Binding PopulationSize}" />
-							<u:NumericDoubleUpDown
-                                u:FormItem.Label="变异率:"
-                                Maximum="1"
-                                Minimum="0.01"
-                                Value="{Binding MutationRate}" />
-						</u:FormGroup>
-					</u:Form>
+			<SplitView
+                DisplayMode="Inline"
+                IsPaneOpen="{Binding ElementName=DisplayToggleButton, Path=IsChecked}"
+                OpenPaneLength="600">
+				<SplitView.Pane>
+					<Grid RowDefinitions="Auto,*">
+						<StackPanel Grid.Row="0" Orientation="Vertical">
+							<u:Divider HorizontalContentAlignment="Left">
+								<TextBlock
+                                    FontSize="16"
+                                    FontWeight="Medium"
+                                    Text="数据汇总" />
+							</u:Divider>
 
-					<UniformGrid
-                        Grid.Row="1"
-                        HorizontalAlignment="Center"
-                        Rows="1">
-						<Button
-                            Name="RunButton"
-                            Command="{Binding RunCommand}"
-                            Content="运行" />
-						<Button Margin="10" Content="查看" />
-						<Button Content="导出" />
-					</UniformGrid>
-				</Grid>
-			</u:LoadingContainer>
+							<DataGrid IsReadOnly="True" ItemsSource="{Binding NestingResult.Summaries}">
+								<DataGrid.Columns>
+									<DataGridTextColumn
+                                        Width="6*"
+                                        Binding="{Binding Type}"
+                                        Header="类型" />
+									<DataGridTextColumn
+                                        Width="3*"
+                                        Binding="{Binding Length}"
+                                        Header="长度" />
+									<DataGridTextColumn
+                                        Width="3*"
+                                        Binding="{Binding Piece}"
+                                        Header="件数" />
+									<DataGridTextColumn
+                                        Width="3*"
+                                        Binding="{Binding Utilization}"
+                                        Header="利用率" />
+									<DataGridTextColumn
+                                        Width="3*"
+                                        Binding="{Binding TotalLength}"
+                                        Header="总长" />
+									<DataGridTextColumn
+                                        Width="4*"
+                                        Binding="{Binding RemainTotalLength}"
+                                        Header="余料总长" />
+								</DataGrid.Columns>
+							</DataGrid>
+						</StackPanel>
+						<StackPanel
+                            Grid.Row="1"
+                            Margin="0,10,0,0"
+                            Orientation="Vertical">
+							<StackPanel Grid.Row="0" Orientation="Vertical">
+								<u:Divider HorizontalContentAlignment="Left">
+									<TextBlock
+                                        FontSize="16"
+                                        FontWeight="Medium"
+                                        Text="排版汇总" />
+								</u:Divider>
+								<DataGrid IsReadOnly="True" ItemsSource="{Binding NestingResult.Materials}">
+									<DataGrid.Columns>
+										<DataGridTextColumn
+                                            Width="6*"
+                                            Binding="{Binding Type}"
+                                            Header="类型" />
+										<DataGridTextColumn
+                                            Width="4*"
+                                            Binding="{Binding Length}"
+                                            Header="长度" />
+										<DataGridTextColumn
+                                            Width="3*"
+                                            Binding="{Binding Piece}"
+                                            Header="件数" />
+										<DataGridTextColumn
+                                            Width="3*"
+                                            Binding="{Binding Utilization}"
+                                            Header="利用率" />
+										<DataGridTextColumn
+                                            Width="8*"
+                                            Binding="{Binding NestingPlan}"
+                                            Header="套裁方案" />
+									</DataGrid.Columns>
+								</DataGrid>
+							</StackPanel>
+						</StackPanel>
+					</Grid>
+				</SplitView.Pane>
+				<u:LoadingContainer
+                    Grid.Column="1"
+                    HorizontalContentAlignment="Stretch"
+                    VerticalContentAlignment="Stretch"
+                    IsLoading="{Binding RunCommand.IsRunning}"
+                    LoadingMessage="优化进行中,请稍后...">
+					<u:LoadingContainer.Indicator>
+						<Viewbox
+                            Width="100"
+                            Height="100"
+                            Stretch="Uniform">
+							<u:LoadingIcon Classes="Large" />
+						</Viewbox>
+					</u:LoadingContainer.Indicator>
+					<Grid RowDefinitions="*,Auto">
+						<u:Form
+                            Grid.Row="0"
+                            HorizontalAlignment="Stretch"
+                            DataContext="{Binding Option}"
+                            LabelAlignment="Left"
+                            LabelPosition="Left"
+                            LabelWidth="*">
+							<u:FormGroup Header="切割设置">
+								<u:NumericDoubleUpDown
+                                    u:FormItem.Label="切割缝隙:"
+                                    Minimum="0"
+                                    Value="{Binding Spacing}" />
+								<u:NumericIntUpDown
+                                    u:FormItem.Label="最大段数:"
+                                    Minimum="0"
+                                    Value="{Binding MaxSegments}" />
+							</u:FormGroup>
+							<u:FormGroup Header="优化设置">
+								<u:NumericIntUpDown
+                                    u:FormItem.Label="迭代次数:"
+                                    Minimum="0"
+                                    Value="{Binding Generations}" />
+								<u:NumericIntUpDown
+                                    u:FormItem.Label="种群大小:"
+                                    Minimum="0"
+                                    Value="{Binding PopulationSize}" />
+								<u:NumericDoubleUpDown
+                                    u:FormItem.Label="变异率:"
+                                    Maximum="1"
+                                    Minimum="0.01"
+                                    Value="{Binding MutationRate}" />
+							</u:FormGroup>
+						</u:Form>
+
+						<UniformGrid
+                            Grid.Row="1"
+                            HorizontalAlignment="Center"
+                            Rows="1">
+							<Button
+                                Name="RunButton"
+                                Command="{Binding RunCommand}"
+                                Content="运行" />
+							<ToggleButton
+                                x:Name="DisplayToggleButton"
+                                Margin="10"
+                                Content="查看" />
+							<Button Command="{Binding ExportNestingResultCommand}" Content="导出" />
+						</UniformGrid>
+					</Grid>
+				</u:LoadingContainer>
+			</SplitView>
 		</TabItem>
 	</TabControl>
 </UserControl>
