--- a/NestingAssistant/Views/MainWindow.axaml
+++ b/NestingAssistant/Views/MainWindow.axaml
@@ -10,6 +10,8 @@
     Title="NestingAssistant"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    ExtendClientAreaChromeHints="SystemChrome"
+    SystemDecorations="BorderOnly"
     mc:Ignorable="d">
 	<Panel>
 		<views:ProfileNestingView Margin="0,30,0,0" />
