--- a/NestingAssistant/Views/MainWindow.axaml
+++ b/NestingAssistant/Views/MainWindow.axaml
@@ -14,12 +14,11 @@
     SystemDecorations="BorderOnly"
     mc:Ignorable="d">
 	<u:UrsaWindow.LeftContent>
-		<StackPanel
-            Margin="5,0"
-            Orientation="Horizontal">
+		<StackPanel Margin="5,0" Orientation="Horizontal">
 			<Image
                 Width="25"
                 Height="25"
+                RenderOptions.BitmapInterpolationMode="MediumQuality"
                 Source="/Assets/Logo.png" />
 			<TextBlock
                 Margin="5,0,0,0"
@@ -28,9 +27,7 @@
 		</StackPanel>
 	</u:UrsaWindow.LeftContent>
 	<u:UrsaWindow.RightContent>
-		<u:ThemeToggleButton
-            IsThreeState="True"
-            Mode="Controller" />
+		<u:ThemeToggleButton IsThreeState="True" Mode="Controller" />
 	</u:UrsaWindow.RightContent>
 	<Panel>
 		<views:ProfileNestingView Margin="0,30,0,0" />
