--- a/NestingAssistant/Views/ProfileNestingView.axaml
+++ b/NestingAssistant/Views/ProfileNestingView.axaml
@@ -9,10 +9,10 @@
     xmlns:vm="clr-namespace:NestingAssistant.ViewModels"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    x:DataType="vm:ProfileNestingViewModel"
+    x:DataType="vm:ProfileNesterViewModel"
     mc:Ignorable="d">
 	<Design.DataContext>
-		<vm:ProfileNestingViewModel />
+		<vm:ProfileNesterViewModel />
 	</Design.DataContext>
 	<UserControl.Styles>
 		<!--<Style Selector="ToggleButton#DisplayToggleButton:checked">
@@ -31,16 +31,14 @@
 	<UserControl.Resources />
 	<TabControl>
 		<TabItem Header="零件数据设置">
-			<Grid
-                Grid.Row="0"
-                RowDefinitions="*,Auto">
+			<Grid Grid.Row="0" RowDefinitions="*,Auto">
 				<DataGrid
                     GridLinesVisibility="Horizontal"
                     HeadersVisibility="All"
                     ItemsSource="{Binding ProfileParts}">
 					<DataGrid.Columns>
 						<DataGridTextColumn
-                            Width="8*"
+                            Width="6*"
                             Binding="{Binding Type}"
                             Header="类型" />
 						<DataGridTextColumn
@@ -51,6 +49,10 @@
                             Width="2*"
                             Binding="{Binding Piece}"
                             Header="件数" />
+						<DataGridTextColumn
+                            Width="2*"
+                            Binding="{Binding Index}"
+                            Header="标签" />
 						<DataGridTextColumn
                             Width="8*"
                             Binding="{Binding Label}"
@@ -66,9 +68,7 @@
                         Command="{Binding ImportBasicDataCommand}"
                         CommandParameter="Part"
                         Content="导入零件数据(Excel)" />
-					<Button
-                        Content="从剪切板复制零件数据"
-                        IsEnabled="False" />
+					<Button Content="从剪切板复制零件数据" IsEnabled="False" />
 					<Button
                         Command="{Binding ExportTemplateCommand}"
                         CommandParameter="Part"
@@ -78,9 +78,7 @@
 			</Grid>
 		</TabItem>
 		<TabItem Header="原材料数据设置">
-			<Grid
-                Grid.Row="0"
-                RowDefinitions="*,Auto">
+			<Grid Grid.Row="0" RowDefinitions="*,Auto">
 				<DataGrid
                     GridLinesVisibility="Horizontal"
                     HeadersVisibility="All"
@@ -109,9 +107,7 @@
                         Command="{Binding ImportBasicDataCommand}"
                         CommandParameter="Material"
                         Content="导入原材料数据(Excel)" />
-					<Button
-                        Content="从剪切板复制原材料数据"
-                        IsEnabled="False" />
+					<Button Content="从剪切板复制原材料数据" IsEnabled="False" />
 					<Button
                         Command="{Binding ExportTemplateCommand}"
                         CommandParameter="Material"
@@ -124,57 +120,50 @@
 			<SplitView
                 DisplayMode="Inline"
                 IsPaneOpen="{Binding ElementName=DisplayToggleButton, Path=IsChecked}"
-                OpenPaneLength="600">
+                OpenPaneLength="750">
 				<SplitView.Pane>
 					<Grid RowDefinitions="Auto,*">
-						<StackPanel
-                            Grid.Row="0"
-                            Orientation="Vertical">
+						<StackPanel Grid.Row="0" Orientation="Vertical">
 							<u:Divider HorizontalContentAlignment="Left">
 								<TextBlock
                                     FontSize="16"
                                     FontWeight="Medium"
                                     Text="数据汇总" />
 							</u:Divider>
-
-							<DataGrid
-                                IsReadOnly="True"
-                                ItemsSource="{Binding NestingResult.Summaries}">
-								<DataGrid.Columns>
-									<DataGridTextColumn
-                                        Width="6*"
-                                        Binding="{Binding Type}"
-                                        Header="类型" />
-									<DataGridTextColumn
-                                        Width="3*"
-                                        Binding="{Binding Length}"
-                                        Header="长度" />
-									<DataGridTextColumn
-                                        Width="3*"
-                                        Binding="{Binding Piece}"
-                                        Header="件数" />
-									<DataGridTextColumn
-                                        Width="3*"
-                                        Binding="{Binding Utilization}"
-                                        Header="利用率" />
-									<DataGridTextColumn
-                                        Width="3*"
-                                        Binding="{Binding TotalLength}"
-                                        Header="总长" />
-									<DataGridTextColumn
-                                        Width="4*"
-                                        Binding="{Binding RemainTotalLength}"
-                                        Header="余料总长" />
-								</DataGrid.Columns>
-							</DataGrid>
+							<u:Form
+                                Grid.Row="0"
+                                HorizontalAlignment="Stretch"
+                                LabelAlignment="Left"
+                                LabelPosition="Left"
+                                LabelWidth="*">
+								<u:FormItem
+                                    VerticalAlignment="Center"
+                                    VerticalContentAlignment="Center"
+                                    Label="综合利用率:">
+									<u:DoubleDisplayer
+                                        VerticalAlignment="Center"
+                                        StringFormat="P2"
+                                        Value="{Binding Summary.AverageUtilization}" />
+								</u:FormItem>
+								<u:FormItem Label="材料总数量:">
+									<u:Int32Displayer VerticalAlignment="Center" Value="{Binding Summary.MaterialPiece}" />
+								</u:FormItem>
+								<u:FormItem Label="零件总数量:">
+									<u:Int32Displayer VerticalAlignment="Center" Value="{Binding Summary.PartPiece}" />
+								</u:FormItem>
+								<u:FormItem Label="材料使用长度:">
+									<u:DoubleDisplayer VerticalAlignment="Center" Value="{Binding Summary.TotalLength}" />
+								</u:FormItem>
+								<u:FormItem Label="材料剩余长度:">
+									<u:DoubleDisplayer VerticalAlignment="Center" Value="{Binding Summary.TotalRemainLength}" />
+								</u:FormItem>
+							</u:Form>
 						</StackPanel>
 						<StackPanel
                             Grid.Row="1"
                             Margin="0,10,0,0"
                             Orientation="Vertical">
-							<StackPanel
-                                Grid.Row="0"
-                                Orientation="Vertical">
+							<StackPanel Grid.Row="0" Orientation="Vertical">
 								<u:Divider HorizontalContentAlignment="Left">
 									<TextBlock
                                         FontSize="16"
@@ -182,27 +171,28 @@
                                         Text="排版汇总" />
 								</u:Divider>
 								<DataGrid
+                                    MaxHeight="450"
                                     IsReadOnly="True"
-                                    ItemsSource="{Binding NestingResult.Materials}">
+                                    ItemsSource="{Binding Summary.Plans}">
 									<DataGrid.Columns>
 										<DataGridTextColumn
                                             Width="6*"
                                             Binding="{Binding Type}"
                                             Header="类型" />
 										<DataGridTextColumn
-                                            Width="4*"
+                                            Width="3*"
                                             Binding="{Binding Length}"
                                             Header="长度" />
 										<DataGridTextColumn
                                             Width="3*"
-                                            Binding="{Binding Piece}"
+                                            Binding="{Binding MaterialPiece}"
                                             Header="件数" />
 										<DataGridTextColumn
                                             Width="3*"
-                                            Binding="{Binding Utilization}"
+                                            Binding="{Binding Utilization, StringFormat=P2}"
                                             Header="利用率" />
 										<DataGridTextColumn
-                                            Width="8*"
+                                            Width="9*"
                                             Binding="{Binding NestingPlan}"
                                             Header="套裁方案" />
 									</DataGrid.Columns>
@@ -242,6 +232,7 @@
                                     u:FormItem.Label="最大段数:"
                                     Minimum="0"
                                     Value="{Binding MaxSegments}" />
+								<CheckBox u:FormItem.Label="显示零件序号:" IsChecked="{Binding IsShowPartIndex}" />
 							</u:FormGroup>
 							<!--<u:FormGroup Header="优化设置">
 								<u:NumericIntUpDown
@@ -272,9 +263,7 @@
                                 x:Name="DisplayToggleButton"
                                 Margin="10"
                                 Content="查看" />
-							<Button
-                                Command="{Binding ExportNestingResultCommand}"
-                                Content="导出" />
+							<Button Command="{Binding ExportNestingSummaryCommand}" Content="导出" />
 						</UniformGrid>
 					</Grid>
 				</u:LoadingContainer>
